--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,11 @@
-{
-    "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
+
+  {
+    "version": 2,
+    "name": "nodejs-mysql",
+    "builds": [
+      { "src": "app.js", "use": "@vercel/node" }
+    ],
+    "routes": [
+      { "src": "/(.*)", "dest": "/app.js" }
+    ]
   }
